adding more dependencies for Nashid's use case

--- a/tensorflow-gpu.yml
+++ b/tensorflow-gpu.yml
@@ -3,3 +3,9 @@ dependencies:
     - python=3
     - numpy
     - tensorflow-gpu
+    - opencv
+    - kaffe
+    - pytorch
+    - torchvision
+    - py-opencv
+    - pillow
