--- a/tensorflow-gpu.yml
+++ b/tensorflow-gpu.yml
@@ -4,7 +4,7 @@ dependencies:
     - numpy
     - tensorflow-gpu
     - opencv
-    - kaffe
+    - caffe
     - pytorch
     - torchvision
     - py-opencv
